# pacman-pthreads-CC3086

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  puntajes.txt  setup-ubuntu.sh
headers/: GameManager.h  Ghost.h  Mapa.h  Object.h  Pacman.h  Pared.h  PowerUp.h  Punto.h  highscore.h  ui.h
src/: GameManager.cpp  Ghost.cpp  Mapa.cpp  Object.cpp  Pacman.cpp  Pared.cpp  PowerUp.cpp  Punto.cpp  highscore.cpp  main.cpp  ui.cpp  ui.h
